--- a/Reposteria/src/main/resources/templates/categoria/modifica.html
+++ b/Reposteria/src/main/resources/templates/categoria/modifica.html
@@ -5,14 +5,14 @@
       xmlns:th="http://www.thymeleaf.org">
        
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>      
+        <title>Reposteria</title>      
     </head>
        
     <body>
          <header th:replace="~{layout/plantilla :: header}"/>
-         <section th:replace="~{productos/fragmentos :: botonesAgreagar}"/>
-         <section th:replace="~{productos/fragmentos :: agregarCategorias}"/>
-         <section th:replace="~{productos/fragmentos :: listadoCategoria}"/>
+         
+         <section th:replace="~(categoria/fragmentos :: editarCategoria)"/>
+         
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
 </html>
