--- a/Reposteria/src/main/resources/templates/layout/plantilla.html
+++ b/Reposteria/src/main/resources/templates/layout/plantilla.html
@@ -6,9 +6,26 @@
         <meta charset="UTF-8"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+         <script th:src="@{/js/rutinas.js}"></script>        
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>        
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>     
+         <style>
+            body {
+                background-image: url('C:\Users\Daniel\Documents\GitHub\SC-403_Proyecto_Reposteria_Artesanal\Reposteria\src\main\resources\static\img\reposteria.jpeg');
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+            .navbar {
+                background-color: #3498db; /* Cambia el color de fondo de la barra de navegación */
+            }
+            .navbar-brand {
+                color: white; /* Cambia el color del texto del logotipo */
+            }
+            .navbar-toggler-icon {
+                background-color: white; /* Cambia el color del icono de menú */
+            }
+        </style>
     </head>
 
     <body>
@@ -21,8 +38,8 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <ul class="navbar-nav">
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categorias/listado}">[[#{plantilla.categorias}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/productos/listado}">[[#{plantilla.productos}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
                         </ul>
                         <div class="col-md-3">
