--- a/Reposteria/src/main/resources/templates/layout/plantilla.html
+++ b/Reposteria/src/main/resources/templates/layout/plantilla.html
@@ -2,37 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head">
-        <title>Reposteria</title>
+        <title>Reposteria_Artesanal</title>
         <meta charset="UTF-8"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-         <script th:src="@{/js/rutinas.js}"></script>        
+        <script th:src="@{/js/rutinas.js}"></script>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>     
-         <style>
-            body {
-                background-image: url('C:\Users\Daniel\Documents\GitHub\SC-403_Proyecto_Reposteria_Artesanal\Reposteria\src\main\resources\static\img\reposteria.jpeg');
-                background-size: cover;
-                background-repeat: no-repeat;
-            }
-            .navbar {
-                background-color: #3498db; /* Cambia el color de fondo de la barra de navegación */
-            }
-            .navbar-brand {
-                color: white; /* Cambia el color del texto del logotipo */
-            }
-            .navbar-toggler-icon {
-                background-color: white; /* Cambia el color del icono de menú */
-            }
-        </style>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>        
     </head>
-
     <body>
         <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
                 <div class="container">
-                    <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
+                    <a th:href="@{/}" class="navbar-brand mb-0 h1">[[#{aplicacion.titulo}]]</a>
                     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -40,7 +23,7 @@
                         <ul class="navbar-nav">
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
+
                         </ul>
                         <div class="col-md-3">
                             <ul class="navbar-nav">                                
@@ -71,30 +54,6 @@
                 </div>
             </div>
         </footer>
+
+
     </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
