--- a/Reposteria/src/main/resources/templates/layout/plantilla.html
+++ b/Reposteria/src/main/resources/templates/layout/plantilla.html
@@ -9,7 +9,14 @@
         <script th:src="@{/js/rutinas.js}"></script>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>        
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script> 
+             <style>
+            body {
+                background-image: url('/img/reposteria.jpg'); /* Cambia 'ruta_de_la_imagen.jpg' por la ruta real de tu imagen */
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+        </style>
     </head>
     <body>
         <header th:fragment="header" class="header">
@@ -23,7 +30,6 @@
                         <ul class="navbar-nav">
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
-
                         </ul>
                         <div class="col-md-3">
                             <ul class="navbar-nav">                                
@@ -34,7 +40,7 @@
                     </div>
                 </div>
             </nav>
-            <section id="main-header" class="py-2 bg-success text-white">
+            <section id="main-header" class="py-2 bg-info text-dark">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
@@ -45,7 +51,7 @@
             </section>
         </header>
 
-        <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
+        <footer th:fragment="footer" class="bg-info text-dark mt-5 p-10">
             <div class="container">
                 <div class="col">
                     <p class="lead text-center">
