--- a/Reposteria/src/main/resources/templates/login.html
+++ b/Reposteria/src/main/resources/templates/login.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://wwww.thymeleaf.org">
-<head th:replace="~{​layout/plantilla :: head}​">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{layout/plantilla :: head}">
     <title>Reposteria</title>
     <meta charset="UTF-8"/>
+    <!-- Agrega estilos para el video de fondo -->
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            overflow: hidden;
+        }
+
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: fixed;
+            z-index: -1;
+        }
+
+        .content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .card {
+            margin-top: 50px;
+        }
+
+        .card-footer {
+            margin-top: 20px;
+        }
+    </style>
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+    <script th:src="@{/js/rutinas.js}"></script>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>        
 </head>
 <body>
-    <header th:replace="~{​layout/plantilla :: header}​"/>
-    <div class="container my-5">
-        <div class="row align-items-center">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <div class="card">
+    <!-- Agrega el video de fondo -->
+    <video autoplay muted loop>
+        <source th:src="@{/videos/fondo.mp4}" type="video/mp4"/>
+        Tu navegador no soporta el elemento de video.
+    </video>
+
+    <div class="content">
+        <header th:replace="~{layout/plantilla :: header}"/>
+        
+        <!-- Contenido de tu formulario -->
+        <div class="container my-5">
+            <div class="row align-items-center">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="card">
                     <div class="card-header bg-success"><h2>[[#{​login.login}​]]</h2></div>
                     <div class="card-body">
                         <form method="POST" th:action="@{​/login}​">
