--- a/Reposteria/src/main/resources/templates/layout/plantilla.html
+++ b/Reposteria/src/main/resources/templates/layout/plantilla.html
@@ -7,14 +7,24 @@
         <title>Reposteria Artesanal</title>
         <meta charset="UTF-8"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}" />
+        <link rel="stylesheet" th:href="@{/css/styles.css}" />
+        <link rel="stylesheet" th:href="@{/css/fonts.css}" /> <!-- Agrega este enlace para la nueva fuente -->
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/js/rutinas.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <style>
+            body {
+                background-image: url('/img/reposteria.jpg'); /* Cambia 'ruta_de_la_imagen.jpg' por la ruta real de tu imagen */
+                background-size: cover;
+                background-repeat: no-repeat;
+                font-family: 'NuevaFuente', brush script MT;
+                font-size: 22px;
+            }
+        </style>
     </head>
     <body>
-
         <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
                 <div class="container">
@@ -78,7 +88,7 @@
                     </div>
                 </div>
             </nav>
-            <section id="main-header" class="py-2 bg-success text-white">
+            <section id="main-header" class="py-2 bg-info text-dark">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
