--- a/Reposteria/src/main/resources/templates/layout/plantilla.html
+++ b/Reposteria/src/main/resources/templates/layout/plantilla.html
@@ -44,8 +44,9 @@
                                    aria-expanded="false">[[#{plantilla.pruebas}]]</a>
                                 <ul class="dropdown-menu dropdown-menu-dark" sec:authorize="hasRole('ROLE_ADMIN')">
                                     <li><a class="dropdown-item" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
-                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>                                    
+<!--                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>-->
+<!--                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>-->
+                                    <li><a class="dropdown-item" th:href="@{/reportes/principal}">[[#{plantilla.reportes}]]</a></li>                                     
                                 </ul>
                             </li>                            
                         </ul>
@@ -73,7 +74,7 @@
                                      alt="Imágen del usuario"
                                      height="40"
                                      class="rounded-circle"/>
-                                <span sec:authentication="name">Santi</span>
+                                <span sec:authentication="name"></span>
                             </li>
                             <li class="nav-item my-auto">
                                 <form method="post" th:action="@{/logout}">
@@ -88,7 +89,7 @@
                     </div>
                 </div>
             </nav>
-            <section id="main-header" class="py-2 bg-info text-dark">
+            <section id="main-header" class="py-2 bg-info text-white">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
@@ -100,7 +101,7 @@
         </header>
 
         <footer th:fragment="footer"
-                class="bg-info text-white mt-5 p-2">
+                class="bg-info text-white mt-5 p-2" style="position: fixed; bottom: 0; width: 100%;">
             <div class="container">
                 <div class="col">
                     <p class="lead text-center">&COPY[[#{plantilla.derechos}]]</p>
