--- a/Reposteria/src/main/resources/templates/login.html
+++ b/Reposteria/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://wwww.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
+        <title>Reposteria</title>
         <meta charset="UTF-8"/>
     </head>
     <body>
@@ -13,7 +13,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="card">
-                        <div class="card-header bg-success"><h2>[[#{login.login}]]</h2></div>
+                        <div class="card-header bg-info"><h2>[[#{login.login}]]</h2></div>
                         <div class="card-body">
                             <form method="POST" th:action="@{/login}">
                                 <div class="form-group row my-3">
@@ -26,8 +26,8 @@
                                 <div class="card-footer col text-center">
                                     <button class="btn btn-primary" >
                                         <a th:href="@{/registro/nuevo}" class="btn"><i class="fas fa-user-plus"></i> [[#{accion.registrar}]]</a></button>
-                                    <button class="btn btn-info" >                                        
-                                        <a th:href="@{/registro/recordar}" class="btn"><i class="fas fa-envelope"></i> [[#{accion.recordar}]]</a></button>
+<!--                                    <button class="btn btn-info" >                                        
+                                        <a th:href="@{/registro/recordar}" class="btn"><i class="fas fa-envelope"></i> [[#{accion.recordar}]]</a></button>-->
                                     <button class="btn btn-success" type="submit">
                                         <span class="btn"><i class="fas fa-sign-in-alt"></i>
                                             [[#{login.login}]]</span></button>
