--- a/Reposteria/src/main/resources/static/css/menu.css
+++ b/Reposteria/src/main/resources/static/css/menu.css
@@ -10,7 +10,7 @@ body {
 
 .header {
     position: fixed;
-    background-color: #076AF0;
+    background-color: #e6e6fa;
     height: 80px;
     width: 100%;
     top: 0;
