--- a/Reposteria/src/main/resources/static/css/estilos.css
+++ b/Reposteria/src/main/resources/static/css/estilos.css
@@ -13,7 +13,7 @@ body {
 
 header {
     position: fixed;
-    background-color: blue;    
+    background-color: lavender;    
     top: 0;
     left: 0;
     height: 80px;
@@ -22,7 +22,7 @@ header {
 
 aside {
     position: fixed;
-    background-color: aquamarine;    
+    background-color: lavender;    
     top: 80px;
     left: 0;
     bottom: 20px;
@@ -32,7 +32,7 @@ aside {
 section {
     overflow-y: scroll;
     position: fixed;
-    background-color: bisque;    
+    background-color: lavender;    
     top: 80px;
     left: 20%;
     bottom: 20px;
@@ -52,7 +52,7 @@ footer {
 
 a {
     text-decoration: none;
-    background-color: green;
+    background-color: lavender;
     color: white;
 }
 
